confluence/manifests/03-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: confluence
  name: confluence
  namespace: atlassian-confluence
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: confluence
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: confluence
    spec:
      containers:
      - env:
        - name: CATALINA_CONNECTOR_PROXYNAME
          value: confluence.k8s-srini.s3labs.com
        - name: CATALINA_CONNECTOR_PROXYPORT
          value: "443"
        - name: CATALINA_CONNECTOR_SCHEME
          value: https
        - name: CATALINA_CONNECTOR_SECURE
          value: "true"
        - name: JVM_MINIMUM_MEMORY
          value: 1024m
        - name: JVM_MAXIMUM_MEMORY
          value: 1024m
        - name: JVM_SUPPORT_RECOMMENDED_ARGS
          value: -XX:MaxMetaspaceSize=512m -XX:MaxDirectMemorySize=10m  -Dsynchrony.memory.max=0m
        image: atlassian/confluence-server:6.9.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 60
          periodSeconds: 15
          successThreshold: 1
          tcpSocket:
            port: http
          timeoutSeconds: 3
        name: confluence
        ports:
        - containerPort: 8090
          name: http
          protocol: TCP
        - containerPort: 8091
          name: synchrony
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 15
          successThreshold: 1
          tcpSocket:
            port: http
          timeoutSeconds: 3
        resources:
          limits:
            cpu: 800m
            memory: 2Gi
          requests:
            cpu: "0"
            memory: 2Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/atlassian/application-data/confluence
          name: data
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: confluence
