confluence/manifests/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: confluence
  name: confluence-service
  namespace: atlassian-confluence
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  - name: synchrony
    port: 8091
    protocol: TCP
    targetPort: synchrony
  selector:
    app: confluence
